Sat Feb 15 10:55:12 2014  Hiroshi Shirosaki  <h.shirosaki@gmail.com>

	* ext/-test-/win32/fd_setsize/depend: fix wrong dependencies.
	  [ruby-dev:47253]

Sat Feb 15 00:38:54 2014  Tanaka Akira  <akr@fsij.org>

	* enum.c: Enumerable#{min,min_by,max,max_by} extended to take an
	  optional argument.
	  (nmin_cmp): New function.
	  (nmin_block_cmp): Ditto
	  (nmin_filter): Ditto.
	  (nmin_i): Ditto.
	  (nmin_run): Ditto.
	  (enum_min): Call nmin_run if the optional argument is given.
	  (nmin_max): Ditto.
	  (nmin_min_by): Ditto.
	  (nmin_max_by): Ditto.

	* range.c: Range#{min,max} extended to take an optional argument.
	  (range_min): Call range_first if the optional argument is given.
	  (range_max): Call rb_call_super if the optional argument is given.

	[ruby-core:57111] [Feature #8887]

Sat Feb 15 00:27:46 2014  Tanaka Akira  <akr@fsij.org>

	* include/ruby/ruby.h,
	  internal.h,
	  ext/-test-/bignum/bigzero.c: Hide a Bignum definition.
	  [ruby-core:42891] [Feature #6083]

Sat Feb 15 00:13:14 2014  Tanaka Akira  <akr@fsij.org>

	* include/ruby/intern.h,
	  include/ruby/io.h,
	  include/ruby/ruby.h,
	  include/ruby/win32.h,
	  include/ruby/backward/rubysig.h,
	  bignum.c,
	  gc.c,
	  io.c,
	  process.c,
	  safe.c,
	  struct.c,
	  thread.c,
	  ext/socket/rubysocket.h,
	  ext/-test-/old_thread_select: Remove deprecated definitions
	  [ruby-core:60581] [Feature #9502]

Fri Feb 14 18:38:46 2014  Eric Wong  <e@80x24.org>

	* string.c (rb_str_format_m): trade volatile for RB_GC_GUARD
	  RB_GC_GUARD meaning is clear and has better code generation.
	  [ruby-core:60688]

Thu Feb 13 23:30:30 2014  Shugo Maeda  <shugo@ruby-lang.org>

	* vm_insnhelper.c (vm_call_method): should check ci->me->flag of
	  a refining method in case the method is private.
	  [ruby-core:60111] [Bug #9452]

	* vm_method.c (make_method_entry_refined): set me->flag of a refined
	  method entry to NOEX_PUBLIC in case the original method is private